resolve bug on mobile device for 404 page

--- a/src/components/Page404/page404.scss
+++ b/src/components/Page404/page404.scss
@@ -7,8 +7,8 @@
 
 }
 
-@keyframes food-movement {100% {transform: translate(1200px,-600px);} }
-@keyframes food-movement2 {100% {transform: translate(1800px,-700px);} }
+@keyframes food-movement {100% {transform: translate(100vmin,-600px);} }
+@keyframes food-movement2 {100% {transform: translate(100vmin,-700px);} }
 @keyframes spin-food{ 
   50% { transform:rotate(-160deg); transition: transform 10s; }
   100% { transform:rotate(-360deg); transition: transform 20s; } }
@@ -48,13 +48,13 @@
 
 
 .objects img{
-    z-index: 90;
+    z-index: 0;
     pointer-events: none;
     
 }
 
 @mixin object_food {
-    z-index: 95;
+    z-index: 0;
     position: absolute;
     transform: translateX(-50px);
     top: 75%;
@@ -99,10 +99,9 @@ top: 95%;
 }
 
 .object_fridge{
-    animation: rotate-fridge 20s infinite linear both alternate;
+    animation: rotate-fridge 10s infinite linear both alternate;
 }
 .box_fridge{
-    z-index: 90 !important;
     position: absolute;
     top: 60%;
     right: 20%;
@@ -117,7 +116,7 @@ top: 95%;
   display: flex;
   flex-direction: column;
   & h3{
-    z-index: 120;
+    z-index: 1;
     font-weight: bold;
     font-size: 10vmin;
     text-shadow: slategray 2px 2px;
@@ -131,7 +130,7 @@ top: 95%;
   flex-direction: row;
   justify-content: center;
     & h2{
-      z-index: 120;
+      z-index: 1;
       font-size: 30vmin;
      &:nth-child(1){color: $fourthColor}
      &:nth-child(3){color: $thirdColor}
@@ -141,7 +140,9 @@ top: 95%;
 
 
 @media only screen and (max-width: 600px){
-    
+    .page_404{
+      height: 100vh;
+    }
     .box_fridge{
         top: 70%;
     }
